# naivebayes

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake
examples/: CMakeLists.txt  Makefile  cmake_install.cmake
examples/breast_cancer/: .aaa.swp  CMakeLists.txt  Makefile  aaa  cmake_install.cmake  main.cpp
naivebayes/: CMakeLists.txt  Makefile  cmake_install.cmake  data_set.cpp  data_set.h  instances.cpp  instances.h  matrix.h  missing_values.cpp  missing_values.h  naivebayes.h  probability.cpp  probability.h  variables.cpp  variables.h  vector.h
tinyxml2/: Makefile  cmake_install.cmake
